--- a/Epic Games/Style/style.css
+++ b/Epic Games/Style/style.css
@@ -1480,3 +1480,38 @@ span {
   height: 100%;
   background: linear-gradient(to bottom, #ffffff1c, #ffffff1a);
 }
+
+/* Section2 End */
+
+/* Section3 Start */
+.Fortnite-Experiences {
+  height: 120vh;
+  width: 76%;
+  display: flex;
+  margin: 50px auto;
+  margin-top: 40px;
+}
+.section3-title {
+  color: white;
+  font-family: sans-serif;
+  font-size: 19px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  width: 84%;
+  margin-left: 10px;
+}
+.btn-fortnite {
+  float: right;
+  width: 15%;
+  height: 30px;
+  border: 1px solid rgb(196, 196, 196);
+  border-radius: 4px;
+}
+.btn-fortnite h1 {
+  font-family: sans-serif;
+  font-size: 10.5px;
+  letter-spacing: 0.5px;
+  color: white;
+  text-align: center;
+  line-height: 2.7;
+}
