--- a/Epic Games/Style/style.css
+++ b/Epic Games/Style/style.css
@@ -49,6 +49,9 @@ img {
   transition: 0.4s;
   cursor: pointer;
 }
+.fa-bars {
+  display: none;
+}
 #check {
   position: absolute;
   width: 0;
@@ -149,7 +152,7 @@ img {
   cursor: default;
   padding: 30px;
   visibility: hidden;
-  z-index: 4;
+  z-index: 7;
 }
 .nav-border {
   border-left: 2px solid #303034;
@@ -273,7 +276,7 @@ ul {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 32px 16px, rgba(0, 0, 0, 0.1) 0px 16px 8px,
     rgba(0, 0, 0, 0.1) 0px 8px 4px, rgba(0, 0, 0, 0.1) 0px 4px 2px,
     rgba(0, 0, 0, 0.1) 0px 2px 1px;
-  z-index: 4;
+  z-index: 7;
 }
 .language p {
   width: 100%;
@@ -344,7 +347,7 @@ ul {
   display: flex;
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 6;
   background-color: #141314;
 }
 .content {
@@ -429,14 +432,14 @@ header {
   display: flex;
 }
 .Fortnite {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
   bottom: 120px;
 }
 .dead-by-daylight {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
@@ -444,7 +447,7 @@ header {
   visibility: hidden;
 }
 .The-Game-Awards {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
@@ -452,7 +455,7 @@ header {
   visibility: hidden;
 }
 .avatar {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
@@ -460,7 +463,7 @@ header {
   visibility: hidden;
 }
 .Homeworld3 {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
@@ -468,7 +471,7 @@ header {
   visibility: hidden;
 }
 .destiny2 {
-  width: 50%;
+  width: 100%;
   height: 50%;
   position: absolute;
   left: 30px;
@@ -724,7 +727,6 @@ header {
 #radio5:checked ~ .column .liner5 .title-games-image,
 #radio6:checked ~ .column .liner6 .title-games-image {
   -webkit-transition: 200ms cubic-bezier(0.17, 0.17, 0.23, 1);
-  width: 43px;
   height: 83.5%;
   transition-duration: 200ms;
   transition-timing-function: cubic-bezier(0.17, 0.17, 0.23, 1);
@@ -847,7 +849,7 @@ header {
 }
 .Section1-part2 {
   width: 80%;
-  height: 44%;
+  height: 450px;
   display: flex;
   margin-bottom: 40px;
 }
@@ -1479,7 +1481,7 @@ span {
   height: 120vh;
   width: 76%;
   display: flex;
-  margin: 40px auto;
+  margin: 70px auto;
   margin-top: 40px;
   flex-wrap: wrap;
 }
@@ -1489,17 +1491,32 @@ span {
   font-size: 19px;
   font-weight: 500;
   letter-spacing: 0.5px;
-  width: 83%;
+  width: 30%;
   height: 2%;
 }
 .btn-fortnite {
-  float: right;
   width: 15%;
   height: 30px;
   border: 1px solid rgb(196, 196, 196);
   border-radius: 4px;
-  margin-right: 10px;
   cursor: pointer;
+  position: relative;
+  right: 0;
+}
+.pack {
+  display: flex;
+  width: 100%;
+  height: 5%;
+}
+.pack1 {
+  justify-content: space-between;
+  padding-right: 10px;
+}
+.pack2 {
+  height: 35%;
+}
+.pack3 {
+  height: 50%;
 }
 .btn-fortnite h1 {
   font-family: sans-serif;
@@ -1514,8 +1531,8 @@ span {
   border: 1px solid rgba(196, 196, 196, 0.637);
 }
 .fortnite-event {
-  width: 31.7%;
-  height: 35%;
+  width: 32%;
+  height: 100%;
   margin-top: 15px;
   display: flex;
   flex-direction: column;
@@ -1599,7 +1616,7 @@ span {
 .fortnit-ad,
 .fallguys-ad {
   width: 48%;
-  height: 50%;
+  height: 100%;
 }
 .fortnit-ad {
   margin-right: 30px;
@@ -1875,14 +1892,13 @@ span {
 /* Section5 Start */
 
 .Trending {
-  height: 50vh;
+  height: 400px;
   width: 80%;
   display: flex;
   margin: 50px auto;
   flex-wrap: wrap;
   align-content: flex-start;
   justify-content: space-between;
-  margin-bottom: 130px;
   align-items: center;
 }
 .Trending .view-more-btn2 {
@@ -2028,7 +2044,7 @@ span {
   left: -40px;
 }
 .game-library-box li h1 {
-  font-size: 14px;
+  font-size: 12px;
   font-family: sans-serif;
   font-weight: 600;
   letter-spacing: 0.3px;
@@ -2128,7 +2144,7 @@ span {
 
 .Most-Popular {
   width: 100%;
-  height: 65vh;
+  height: 450px;
   display: flex;
   flex-direction: column;
   z-index: 2;
@@ -2437,7 +2453,7 @@ span {
 
 .Recently-Updated {
   width: 100%;
-  height: 65vh;
+  height: 400px;
   display: flex;
   z-index: 2;
   margin: 50px auto;
@@ -2774,7 +2790,7 @@ span {
 
 .Now-On-The-Epic-Games-Store {
   width: 100%;
-  height: 69vh;
+  height: 450px;
   display: flex;
   z-index: 2;
   margin: 50px auto;
@@ -3309,6 +3325,30 @@ footer img {
   .title-games-text {
     left: 80px;
   }
+  .Holiday-Sale-Spotlight {
+    height: 120vh;
+  }
+  .Section1-part2 {
+    width: 80%;
+    height: 45%;
+    display: flex;
+    margin-bottom: 45px;
+  }
+  .Section1-part3 {
+    height: 40%;
+  }
+  .Trending {
+    height: 52vh;
+  }
+  .Most-Popular {
+    height: 56vh;
+  }
+  .Recently-Updated {
+    height: 60vh;
+  }
+  .Now-On-The-Epic-Games-Store {
+    height: 60vh;
+  }
   #radio1:checked ~ .column .liner1 .title-games-image,
   #radio2:checked ~ .column .liner2 .title-games-image,
   #radio3:checked ~ .column .liner3 .title-games-image,
@@ -3417,20 +3457,194 @@ footer img {
   }
   .Epic-Games-option {
     width: 75%;
-    height: 70vh;
-    margin: 0 auto;
-    display: flex;
+    height: 60vh;
+    padding: 0;
   }
   footer {
     width: 100%;
     height: 52vh;
-    background-color: #202020;
-    display: flex;
-    flex-direction: column;
-    padding: 34px 72px;
-    padding-bottom: 40px;
-    cursor: default;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
+  .main-nav {
+    height: 12vh;
+  }
+  .hidden,
+  .nav-section,
+  .search {
+    display: none;
+  }
+  .nav-border {
+    margin-left: 4%;
+    margin-right: 2.5%;
+    margin-top: 2.5%;
+  }
+  .search-bar {
+    background-color: #141314;
+    width: 0;
+    height: 0;
+  }
+  .fa-bars {
+    display: block;
+    font-size: 22px;
+    color: #b3b3b6;
+    margin: 25px 25px;
+  }
+  .fa-magnifying-glass {
+    position: absolute;
+    display: block;
+    left: 50px;
+    font-size: 15px;
+  }
+  .sub-nav-text2 {
+    width: 60%;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
+    font-size: 14px;
+  }
+  #angle2 {
+    transform: rotate(-90deg);
+    font-size: 10px;
+    margin-left: 3px;
+  }
+  .header {
+    width: 96%;
+    display: flex;
+    height: 53vh;
+    margin-top: 10px;
+  }
+  .cover {
+    width: 76%;
+  }
+  .column {
+    width: 22%;
+  }
+  .title-games-image {
+    width: 30px;
+  }
+  .Homeworld3-transparent-box {
+    width: 100px;
+    height: 75px;
+  }
+  .Fortnite-transparent-box {
+    width: 140px;
+    height: 40px;
+  }
+  .The-Game-Awards-transparent-box {
+    width: 150px;
+    height: 45px;
+    margin-top: 20px;
+  }
+  .avatar-transparent-box {
+    width: 130px;
+    height: 40px;
+    margin-bottom: 15px;
+  }
+  .dead-by-daylight-transparent-box {
+    width: 180px;
+    height: 80px;
+  }
+  .destiny2-transparent-box {
+    width: 150px;
+    height: 40px;
+  }
+  .overflow {
+    width: 100%;
+  }
+  .Section1-part1,
+  .Section7-part1,
+  .Section8-part1,
+  .Section9-part1 {
+    width: 100%;
+    padding-left: 15px;
+    height: 10vh;
+  }
+  .Section1-part2,
+  .Trending,
+  .Section7-part2,
+  .Section8-part2,
+  .Section9-part2 {
+    width: 100%;
+    padding-left: 15px;
+  }
+
+  .Section1-part3 {
+    width: 100%;
+    padding-left: 15px;
+  }
+  .overflow-box,
+  .opening,
+  .category {
+    display: none;
+    width: 100%;
+  }
+  .overflow-games {
+    width: 92%;
+  }
+  .visible {
+    display: block;
+  }
+  .visible2 {
+    display: flex;
+  }
+  .angle-right,
+  .angle-right2,
+  .angle-right3,
+  .angle-right4,
+  .angle-right5 {
+    right: 20px;
+    margin-right: 0;
+  }
+  .angle-left,
+  .angle-left2,
+  .angle-left3,
+  .angle-left4 {
+    right: 60px;
+    margin-right: 0;
+  }
+  .holiday {
+    height: 200px;
+  }
+  .Holiday-Sale-Spotlight {
+    height: 140vh;
+  }
+  .section2-part2 {
+    width: 98%;
+  }
+  .btn-fortnite {
+    width: 160px;
+  }
+  .Fortnite-Experiences {
+    width: 96%;
+  }
+  .tooltip3 {
+    margin: 0;
+  }
+  .pack1 {
+    height: 1%;
+  }
+  .game-library {
+    width: 100%;
+    height: 500px;
+  }
+  .game-library-image {
+    width: 25%;
+    margin-right: 15px;
+  }
+  .game-library-box li {
+    padding-left: 10px;
+    padding-right: 0;
+  }
+  .Most-Popular {
+    margin-bottom: 0;
+  }
+  .Recently-Updated {
+    margin-top: 0;
+  }
+  .Epic-Games-option {
+    width: 96%;
+    padding-bottom: 60px;
+    height: 360px;
+  }
 }
