--- a/Epic Games/Style/style.css
+++ b/Epic Games/Style/style.css
@@ -412,6 +412,9 @@ header {
   display: flex;
   height: 67vh;
 }
+.sub-nav-text2 {
+  display: none;
+}
 .cover {
   width: 81%;
   height: 100%;
@@ -1892,7 +1895,7 @@ span {
 /* Section5 Start */
 
 .Trending {
-  height: 400px;
+  height: 450px;
   width: 80%;
   display: flex;
   margin: 50px auto;
@@ -2453,7 +2456,7 @@ span {
 
 .Recently-Updated {
   width: 100%;
-  height: 400px;
+  height: 500px;
   display: flex;
   z-index: 2;
   margin: 50px auto;
@@ -2790,7 +2793,7 @@ span {
 
 .Now-On-The-Epic-Games-Store {
   width: 100%;
-  height: 450px;
+  height: 500px;
   display: flex;
   z-index: 2;
   margin: 50px auto;
@@ -3497,6 +3500,7 @@ footer img {
     font-size: 15px;
   }
   .sub-nav-text2 {
+    display: block;
     width: 60%;
     text-align: center;
     color: white;
@@ -3646,5 +3650,72 @@ footer img {
     width: 96%;
     padding-bottom: 60px;
     height: 360px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .nav-menu {
+    flex-direction: column;
+    overflow-y: scroll;
+    width: 95%;
+  }
+  .nav-menu::-webkit-scrollbar {
+    display: none;
+  }
+  .sub-menu-item {
+    width: 223px;
+  }
+  .eg-logo {
+    margin-left: 25px;
+  }
+  .nav-border {
+    margin-left: 45px;
+    margin-top: 20px;
+  }
+  .fa-magnifying-glass {
+    margin-left: -20px;
+  }
+  .cover {
+    display: none;
+  }
+  .column {
+    flex-direction: row;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
+  }
+  .header {
+    padding-left: 10px;
+  }
+  .title-games-text {
+    display: none;
+  }
+  #radio1:checked ~ .column .liner1,
+  #radio2:checked ~ .column .liner2,
+  #radio3:checked ~ .column .liner3,
+  #radio4:checked ~ .column .liner4,
+  #radio5:checked ~ .column .liner5,
+  #radio6:checked ~ .column .liner6 {
+    width: 100%;
+    height: 100%;
+    background-color: #00000000;
+  }
+  #radio1:checked ~ .column .liner1 .title-games-image,
+  #radio2:checked ~ .column .liner2 .title-games-image,
+  #radio3:checked ~ .column .liner3 .title-games-image,
+  #radio4:checked ~ .column .liner4 .title-games-image,
+  #radio5:checked ~ .column .liner5 .title-games-image,
+  #radio6:checked ~ .column .liner6 .title-games-image {
+    height: 83%;
+  }
+  #radio1:checked ~ .column .liner1 .bg-color,
+  #radio2:checked ~ .column .liner2 .bg-color,
+  #radio3:checked ~ .column .liner3 .bg-color,
+  #radio4:checked ~ .column .liner4 .bg-color,
+  #radio5:checked ~ .column .liner5 .bg-color,
+  #radio6:checked ~ .column .liner6 .bg-color {
+    visibility: hidden;
+  }
+  .game-title {
+    width: 100%;
   }
 }
