--- a/Epic Games/Style/style.css
+++ b/Epic Games/Style/style.css
@@ -415,6 +415,9 @@ header {
 .sub-nav-text2 {
   display: none;
 }
+.overflow2 {
+  display: none;
+}
 .cover {
   width: 81%;
   height: 100%;
@@ -691,6 +694,10 @@ header {
   position: absolute;
   left: 60px;
 }
+.Development {
+  display: flex;
+  width: 100%;
+}
 .dead-by-daylight-image {
   background-image: url(../image/egs-dead-by-daylight-chucky-carousel-thumb-1080x1920-f2badcb38e47.jpg);
 }
@@ -702,6 +709,9 @@ header {
 }
 .avatar-image {
   background-image: url(../image/egs-avatar-frontiers-of-pandora-thumb-1200x1600-873f5baecc2f.jpg);
+}
+.Avatar-image {
+  background-image: url(../image/egs-avatar-frontiers-of-pandora-breaker-1920x1080-5bad1bc81c26.jpg);
 }
 .destiny2-image {
   background-image: url(../image/en-egs-destiny-2-season-23-carousel-thumb-1200x1600-a3023eefd46f.jpg);
@@ -1076,6 +1086,7 @@ span {
   border: 2px solid white;
   background-color: rgb(22, 21, 21);
 }
+
 #plus {
   color: rgba(255, 255, 255, 0);
   transition: 0.2s;
@@ -1550,7 +1561,6 @@ span {
 .Experience {
   width: 100%;
   height: 65%;
-  background-color: #26bbff;
   display: flex;
   background-position: center;
   background-size: cover;
@@ -1591,9 +1601,6 @@ span {
   transition: 0.2s;
   visibility: visible;
   color: white;
-}
-.tooltip3 {
-  margin-left: 130px;
 }
 .fortnite-event h2 {
   font-family: sans-serif;
@@ -1799,6 +1806,11 @@ span {
 .game-library-box .flex {
   line-height: 1;
 }
+.visible2 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 .flex h1 {
   color: white;
   font-family: sans-serif;
@@ -1939,6 +1951,9 @@ span {
 }
 .Five-Nights-at-Freddy {
   background-image: url(../image/download-five-nights-at-freddys-security-breach-offer-xshms.jfif);
+}
+.vertical {
+  display: flex;
 }
 
 /* Section5 End */
@@ -2115,6 +2130,13 @@ span {
 }
 .The-Messenger {
   background-image: url(../image/EGS_Sabotage_TheMessenger_Portrait-1280x1440-39da361d51204d1d3c9707bfd3b9b2ea.jpg);
+  height: 100%;
+  width: 17.3%;
+  background-position: center;
+  background-size: cover;
+  border-radius: 5px;
+  position: relative;
+  margin-right: 15px;
 }
 .Absolute-Drift {
   background-image: url(../image/EGS_AbsoluteDrift_FunselektorLabsInc_S2-1200x1600-d61d185c1a25c41b211b497b89648832.jpg);
@@ -2147,7 +2169,7 @@ span {
 
 .Most-Popular {
   width: 100%;
-  height: 450px;
+  height: 500px;
   display: flex;
   flex-direction: column;
   z-index: 2;
@@ -2793,7 +2815,7 @@ span {
 
 .Now-On-The-Epic-Games-Store {
   width: 100%;
-  height: 500px;
+  height: 550px;
   display: flex;
   z-index: 2;
   margin: 50px auto;
@@ -3118,6 +3140,11 @@ span {
   display: flex;
   flex-direction: column;
 }
+.base {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 .Sales,
 .Free-Games {
   margin-right: 32px;
@@ -3193,7 +3220,7 @@ span {
 
 footer {
   width: 100%;
-  height: 92vh;
+  height: 100vh;
   background-color: #202020;
   display: flex;
   flex-direction: column;
@@ -3203,7 +3230,6 @@ footer {
 }
 .logo-box {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin-bottom: 22px;
 }
@@ -3274,13 +3300,15 @@ footer h2 {
   height: 100px;
   margin-bottom: 40px;
 }
+.logo-box2 {
+  margin-top: 45px;
+}
 footer p {
   font-size: 12px;
   font-family: sans-serif;
   color: #ccc;
   line-height: 2;
   font-weight: 500;
-  margin-bottom: 45px;
 }
 footer h3 {
   font-size: 12px;
@@ -3293,6 +3321,9 @@ footer h3 {
 footer img {
   width: 32px;
   height: 36px;
+}
+.footer-box {
+  display: flex;
 }
 
 /* Footer End */
@@ -3465,7 +3496,7 @@ footer img {
   }
   footer {
     width: 100%;
-    height: 52vh;
+    height: 55vh;
   }
 }
 @media screen and (max-width: 768px) {
@@ -3591,6 +3622,8 @@ footer img {
   }
   .visible2 {
     display: flex;
+    width: 100%;
+    height: 100%;
   }
   .angle-right,
   .angle-right2,
@@ -3651,6 +3684,21 @@ footer img {
     padding-bottom: 60px;
     height: 360px;
   }
+  .category2 {
+    display: flex;
+  }
+  .vertical {
+    display: flex;
+    width: 100%;
+  }
+  .visible3 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  footer {
+    height: 110vh;
+  }
 }
 @media screen and (max-width: 425px) {
   .nav-menu {
@@ -3658,7 +3706,10 @@ footer img {
     overflow-y: scroll;
     width: 95%;
   }
-  .nav-menu::-webkit-scrollbar {
+  .nav-menu::-webkit-scrollbar,
+  .overflow2::-webkit-scrollbar,
+  .overflow1::-webkit-scrollbar,
+  .overflow::-webkit-scrollbar {
     display: none;
   }
   .sub-menu-item {
@@ -3671,6 +3722,12 @@ footer img {
     margin-left: 45px;
     margin-top: 20px;
   }
+  .sub-nav-text2 {
+    text-align: left;
+  }
+  .content {
+    margin-left: 150px;
+  }
   .fa-magnifying-glass {
     margin-left: -20px;
   }
@@ -3678,44 +3735,376 @@ footer img {
     display: none;
   }
   .column {
-    flex-direction: row;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 100%;
+    display: none;
   }
   .header {
     padding-left: 10px;
+    height: 73vh;
   }
-  .title-games-text {
-    display: none;
+  .overflow2 {
+    display: block;
+    width: 95%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: scroll;
+    z-index: 5;
+    margin-left: 10px;
+    scroll-snap-type: x mandatory;
   }
-  #radio1:checked ~ .column .liner1,
-  #radio2:checked ~ .column .liner2,
-  #radio3:checked ~ .column .liner3,
-  #radio4:checked ~ .column .liner4,
-  #radio5:checked ~ .column .liner5,
-  #radio6:checked ~ .column .liner6 {
+  .overflow1 {
+    display: block;
+    width: 95%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: scroll;
+    z-index: 5;
+    margin-left: 10px;
+    scroll-snap-type: x mandatory;
+  }
+  .overflow {
+    overflow-x: scroll;
+  }
+  .case {
+    width: 390vw;
+    height: 100%;
+    display: flex;
+  }
+  .domain-expansion {
+    width: 20%;
+    height: 100%;
+  }
+  .domain {
+    width: 95%;
+    height: 100%;
+    border-radius: 20px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+  .fortnite {
+    background-image: url(../image/egs-fortnite-chapter-5-season-1-carousel-thumbnail-1200x1600-09ee8db90014\ -\ Copy.jpg);
+  }
+  .Fortnite-Experiences {
+    padding-left: 5px;
+    height: 130vh;
+  }
+  .Experience {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    border-radius: 15px;
+  }
+  .section3-bg-color {
+    border-radius: 15px;
+  }
+  .section3-title {
+    width: 50%;
+  }
+  .pack1 {
+    height: 8%;
+    padding-left: 10px;
+  }
+  .pack2 {
+    height: 40%;
+    margin-bottom: 20px;
+  }
+  .pack3 {
+    height: 50%;
+  }
+  .fortnite-event {
+    margin-block: 0;
+  }
+  .fortnit-ad-image,
+  .fallguys-ad-image {
+    height: 60%;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+  .Developer-Spotlight {
+    height: 260vh;
+    width: 100%;
+  }
+  .fortnit-ad {
+    margin-right: 15px;
+  }
+  .fallguys-ad h1,
+  .fortnit-ad h1,
+  .fallguys-ad h2,
+  .fortnit-ad h2,
+  .fallguys-ad p,
+  .fortnit-ad p {
+    margin-left: 0;
+  }
+  .section2-part1 {
+    margin-bottom: 0;
+    height: 50%;
+    width: 100%;
+    padding-left: 15px;
+    margin-bottom: 60px;
+  }
+  .section2-part2 {
+    width: 100%;
+    padding: 20px 20px;
+    height: 45%;
+    margin-bottom: 50px;
+  }
+  .side-top {
+    height: 10%;
+  }
+  .side-bottom {
+    flex-direction: column;
+  }
+  .side-left,
+  .side-right {
+    width: 100%;
+    height: 45%;
+    margin-bottom: 15px;
+  }
+  .fance {
+    width: 100%;
+    height: 45%;
+  }
+  .fance2 {
+    width: 100%;
+    height: 55%;
+    padding-left: 20px;
+  }
+  .fance3 {
+    width: 100%;
+    height: 55%;
+  }
+  .fance4 {
+    width: 100%;
+    height: 45%;
+    padding-left: 20px;
+  }
+  .linear-gradient2 {
+    background-image: linear-gradient(to top, #000000b2, #ffffff00);
+    display: flex;
     width: 100%;
     height: 100%;
-    background-color: #00000000;
+    border-radius: 20px;
+    flex-direction: column;
   }
-  #radio1:checked ~ .column .liner1 .title-games-image,
-  #radio2:checked ~ .column .liner2 .title-games-image,
-  #radio3:checked ~ .column .liner3 .title-games-image,
-  #radio4:checked ~ .column .liner4 .title-games-image,
-  #radio5:checked ~ .column .liner5 .title-games-image,
-  #radio6:checked ~ .column .liner6 .title-games-image {
-    height: 83%;
+  .nightingale-image {
+    background-image: url(../image/egs-nightingale-carousel-mobile-1200x1600-5f2549878dd7\ .jpg);
   }
-  #radio1:checked ~ .column .liner1 .bg-color,
-  #radio2:checked ~ .column .liner2 .bg-color,
-  #radio3:checked ~ .column .liner3 .bg-color,
-  #radio4:checked ~ .column .liner4 .bg-color,
-  #radio5:checked ~ .column .liner5 .bg-color,
-  #radio6:checked ~ .column .liner6 .bg-color {
-    visibility: hidden;
+  .expeditions-image {
+    background-image: url(../image/egs-expeditions-carousel-mobile-1200x1600-918609e19cbd.jpg);
   }
-  .game-title {
+  .raginge-image {
+    background-image: url(../image/egs-skull-and-bones-season-1-carousel-mobile-1200x1600-7ad68da2e0c1.jpg);
+  }
+  .impact-image {
+    background-image: url(../image/egs-honkai-impact-3rd-update-7-3-part-2-carousel-mobile-1200x1600-20028c05f5d2.jpg);
+  }
+  .rawmen-image {
+    background-image: url(../image/egs-rawmen-carousel-mobile-1200x1600-3a70c7306e96.jpg);
+  }
+  .nightingale-transparent-box {
+    background-image: url(../image/egs-nightingale-carousel-logo-347x121-78133477162a.png);
+    width: 150px;
+    height: 40px;
+    background-size: cover;
+    margin-bottom: 20px;
+  }
+  .expeditions-transparent-box {
+    background-image: url(../image/egs-expeditions-carousel-logo-350x100-ec22a52983ae.png);
+    width: 150px;
+    height: 25px;
+    background-size: cover;
+    margin-bottom: 30px;
+  }
+  .raginge-transparent-box {
+    background-image: url(../image/egs-skull-and-bones-season-1-carousel-logo-279x100-69eaefd259cd.png);
+    width: 150px;
+    height: 40px;
+    background-size: cover;
+    margin-bottom: 20px;
+  }
+  .impact-transparent-box {
+    background-image: url(../image/egs-honkai-impact-3rd-update-7-3-part-2-carousel-logo-v2-400x224-b37bbc9b2759.png);
+    width: 120px;
+    height: 50px;
+    background-size: cover;
+    margin-bottom: 30px;
+    margin-top: 50px;
+  }
+  .rawmen-transparent-box {
+    background-image: url(../image/egs-rawmen-carousel-logo-v2-350x200-5796842b3fe8.png);
+    width: 120px;
+    height: 70px;
+    background-size: cover;
+    margin-bottom: 20px;
+    margin-top: 50px;
+  }
+  .Wishlist-button2 {
+    right: 10px;
+    top: 21px;
+    position: absolute;
+    padding-bottom: 0.5%;
+    border: 2px solid white;
+    background-color: rgb(22, 21, 21);
+    border-radius: 50%;
+    width: 26px;
+    height: 26px;
+  }
+  #plus2 {
+    font-size: 14px;
+    top: 2px;
+    transform: translateX(4px);
+  }
+  .domain h3 {
+    font-family: sans-serif;
+    font-size: 9px;
+    color: white;
+    margin-bottom: 10px;
+  }
+  .domain h4 {
+    font-family: sans-serif;
+    font-size: 15.2px;
+    color: rgba(255, 255, 255, 0.849);
+    margin-bottom: 25px;
+    line-height: 1.3;
+  }
+  .domain h2 {
+    font-family: sans-serif;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.849);
+    line-height: 1.5;
+  }
+  .domain h5 {
+    font-family: sans-serif;
+    font-size: 16px;
+    color: rgba(255, 255, 255, 0.849);
+  }
+  .angle {
+    display: none;
+  }
+  .Holiday-Sale-Spotlight {
+    height: 160vh;
+  }
+  .Section1-part1 {
+    height: 10%;
+    padding-left: 30px;
+  }
+  .Section1-part2 {
+    height: 100%;
+  }
+  .overflow {
+    height: 100%;
+    scroll-snap-type: x mandatory;
+  }
+  .overflow-box {
+    display: block;
+    width: 60vw;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+  .overflow-games {
+    height: 70%;
+  }
+  .category {
+    display: flex;
+    width: 800vw;
+  }
+  .Section1-part3 h2,
+  .Section1-part3 p,
+  .Section1-part3 h1 {
+    margin-left: 0;
+  }
+  .epic-reward {
+    margin-right: 15px;
+  }
+  .epic-reward,
+  .holiday-sale {
+    width: 100vw;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+  .Development {
+    width: 170vw;
+    height: 100%;
+    display: flex;
+  }
+  .book-mark {
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    padding: 0 16px;
+  }
+  .game-library-image {
+    width: 15%;
+  }
+  .game-library-box {
+    width: 250vw;
+  }
+  .hidden {
+    display: none;
+  }
+  .Trending {
+    height: 120vh;
     width: 100%;
+  }
+  .category2 {
+    width: 100%;
+    height: 100%;
+  }
+  .vertical {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .visible3 {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .overflow3 {
+    overflow-x: visible;
+    overflow-y: visible;
+    width: 100%;
+  }
+  .Epic-Games-option {
+    height: 75vh;
+    width: 98%;
+  }
+  .base {
+    display: flex;
+    width: 240vw;
+    height: 100%;
+  }
+  .Epic-Games-option-box {
+    margin-right: 15px;
+  }
+  .Epic-Games-option h1 {
+    font-size: 18px;
+    margin-left: 0;
+    font-weight: 500;
+  }
+  .Epic-Games-option p {
+    font-size: 15px;
+    margin-left: 0;
+  }
+  .Epic-Games-option h2 {
+    font-size: 18px;
+    margin-left: 0;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+  }
+  footer {
+    height: 160vh;
+    padding: 34px 22px;
+    padding-right: 0px;
+  }
+  .footer-box {
+    flex-direction: column;
+  }
+  .logo-box2 div {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    line-height: 2;
   }
 }
