--- a/Epic Games/Style/style.css
+++ b/Epic Games/Style/style.css
@@ -1525,6 +1525,7 @@ span {
 .pack1 {
   justify-content: space-between;
   padding-right: 10px;
+  height: 1%;
 }
 .pack2 {
   height: 35%;
@@ -3328,9 +3329,11 @@ footer img {
 
 /* Footer End */
 
-/* Responsive 4k */
+/* Responsive 4k Start */
 
 @media screen and (min-width: 1441px) {
+  /* Nav(Alpha) Start */
+
   .main-nav {
     height: 8vh;
   }
@@ -3341,6 +3344,11 @@ footer img {
     margin-right: 5px;
     margin-top: 20px;
   }
+
+  /* Nav(Alpha) End */
+
+  /* Header Start */
+
   .header {
     width: 63%;
     height: 62vh;
@@ -3358,30 +3366,6 @@ footer img {
   }
   .title-games-text {
     left: 80px;
-  }
-  .Holiday-Sale-Spotlight {
-    height: 120vh;
-  }
-  .Section1-part2 {
-    width: 80%;
-    height: 45%;
-    display: flex;
-    margin-bottom: 45px;
-  }
-  .Section1-part3 {
-    height: 40%;
-  }
-  .Trending {
-    height: 52vh;
-  }
-  .Most-Popular {
-    height: 56vh;
-  }
-  .Recently-Updated {
-    height: 60vh;
-  }
-  .Now-On-The-Epic-Games-Store {
-    height: 60vh;
   }
   #radio1:checked ~ .column .liner1 .title-games-image,
   #radio2:checked ~ .column .liner2 .title-games-image,
@@ -3489,17 +3473,85 @@ footer img {
     transform: translateX(-159.5vw);
     transition: 1s;
   }
+
+  /* Header End */
+
+  /* Holiday-Sale-Spotlight Start */
+
+  .Holiday-Sale-Spotlight {
+    height: 120vh;
+  }
+  .Section1-part2 {
+    width: 80%;
+    height: 45%;
+    display: flex;
+    margin-bottom: 45px;
+  }
+  .Section1-part3 {
+    height: 40%;
+  }
+
+  /* Holiday-Sale-Spotlight End */
+
+  /* Trending Start */
+
+  .Trending {
+    height: 52vh;
+  }
+
+  /* Trending End */
+
+  /* Most-Popular Start */
+
+  .Most-Popular {
+    height: 56vh;
+  }
+
+  /* Trending End */
+
+  /* Recently-Updated Start */
+
+  .Recently-Updated {
+    height: 60vh;
+  }
+
+  /* Recently-Updated End */
+
+  /* Now-On-The-Epic-Games-Store Start */
+
+  .Now-On-The-Epic-Games-Store {
+    height: 60vh;
+  }
+
+  /* Now-On-The-Epic-Games-Store End */
+
+  /* Epic-Games-option Start */
+
   .Epic-Games-option {
     width: 75%;
     height: 60vh;
     padding: 0;
   }
+
+  /* Epic-Games-option End */
+
+  /* footer Start */
+
   footer {
     width: 100%;
     height: 55vh;
   }
+
+  /* footer End */
 }
+
+/* Responsive 4k End */
+
+/* Responsive Tablet Start */
+
 @media screen and (max-width: 768px) {
+  /* Nav(Alpha) Start */
+
   .main-nav {
     height: 12vh;
   }
@@ -3513,6 +3565,11 @@ footer img {
     margin-right: 2.5%;
     margin-top: 2.5%;
   }
+
+  /* Nav(Alpha) End */
+
+  /* Nav(Beta) Start */
+
   .search-bar {
     background-color: #141314;
     width: 0;
@@ -3538,11 +3595,11 @@ footer img {
     font-family: sans-serif;
     font-size: 14px;
   }
-  #angle2 {
-    transform: rotate(-90deg);
-    font-size: 10px;
-    margin-left: 3px;
-  }
+
+  /* Nav(Beta) End */
+
+  /* Header Start */
+
   .header {
     width: 96%;
     display: flex;
@@ -3584,6 +3641,11 @@ footer img {
     width: 150px;
     height: 40px;
   }
+
+  /* Header End */
+
+  /* Holiday-Sale-Spotlight Start */
+
   .overflow {
     width: 100%;
   }
@@ -3603,7 +3665,6 @@ footer img {
     width: 100%;
     padding-left: 15px;
   }
-
   .Section1-part3 {
     width: 100%;
     padding-left: 15px;
@@ -3624,6 +3685,11 @@ footer img {
     display: flex;
     width: 100%;
     height: 100%;
+  }
+  #angle2 {
+    transform: rotate(-90deg);
+    font-size: 10px;
+    margin-left: 3px;
   }
   .angle-right,
   .angle-right2,
@@ -3649,18 +3715,28 @@ footer img {
   .section2-part2 {
     width: 98%;
   }
-  .btn-fortnite {
-    width: 160px;
+  .category2 {
+    display: flex;
   }
+
+  /* Holiday-Sale-Spotlight End */
+
+  /* Fortnite-Experiences Start */
+
   .Fortnite-Experiences {
     width: 96%;
+  }
+  .btn-fortnite {
+    width: 160px;
   }
   .tooltip3 {
     margin: 0;
   }
-  .pack1 {
-    height: 1%;
-  }
+
+  /* Fortnite-Experiences End */
+
+  /* Game-Library Start */
+
   .game-library {
     width: 100%;
     height: 500px;
@@ -3673,20 +3749,45 @@ footer img {
     padding-left: 10px;
     padding-right: 0;
   }
+
+  /* Game-Library End */
+
+  /* Most-Popular Start */
+
   .Most-Popular {
     margin-bottom: 0;
   }
+
+  /* Most-Popular End */
+
+  /* Recently-Updated Start */
+
   .Recently-Updated {
     margin-top: 0;
   }
+
+  /* Recently-Updated End */
+
+  /* Epic-Games-Option Start */
+
   .Epic-Games-option {
     width: 96%;
     padding-bottom: 60px;
     height: 360px;
   }
-  .category2 {
-    display: flex;
+
+  /* Epic-Games-Option End */
+
+  /* Footer Start */
+
+  footer {
+    height: 110vh;
   }
+
+  /* Footer End */
+
+  /* Tending And Developer-Spotlight Start */
+
   .vertical {
     display: flex;
     width: 100%;
@@ -3696,11 +3797,17 @@ footer img {
     display: flex;
     flex-direction: column;
   }
-  footer {
-    height: 110vh;
-  }
+
+  /* Tending And Developer-Spotlight End */
 }
+
+/* Responsive Tablet End */
+
+/* Responsive Mobil L Start */
+
 @media screen and (max-width: 425px) {
+  /* Nav(Alpha) Start */
+
   .nav-menu {
     flex-direction: column;
     overflow-y: scroll;
@@ -3708,7 +3815,6 @@ footer img {
   }
   .nav-menu::-webkit-scrollbar,
   .overflow2::-webkit-scrollbar,
-  .overflow1::-webkit-scrollbar,
   .overflow::-webkit-scrollbar {
     display: none;
   }
@@ -3722,6 +3828,11 @@ footer img {
     margin-left: 45px;
     margin-top: 20px;
   }
+
+  /* Nav(Alpha) End */
+
+  /* Nav(Beta) Start */
+
   .sub-nav-text2 {
     text-align: left;
   }
@@ -3731,27 +3842,22 @@ footer img {
   .fa-magnifying-glass {
     margin-left: -20px;
   }
+
+  /* Nav(Beta) End */
+
+  /* Header Start */
+
+  .header {
+    padding-left: 10px;
+    height: 73vh;
+  }
   .cover {
     display: none;
   }
   .column {
     display: none;
   }
-  .header {
-    padding-left: 10px;
-    height: 73vh;
-  }
   .overflow2 {
-    display: block;
-    width: 95%;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: scroll;
-    z-index: 5;
-    margin-left: 10px;
-    scroll-snap-type: x mandatory;
-  }
-  .overflow1 {
     display: block;
     width: 95%;
     height: 100%;
@@ -3787,6 +3893,11 @@ footer img {
   .fortnite {
     background-image: url(../image/egs-fortnite-chapter-5-season-1-carousel-thumbnail-1200x1600-09ee8db90014\ -\ Copy.jpg);
   }
+
+  /* Header End */
+
+  /* Fortnite-Experiences Start */
+
   .Fortnite-Experiences {
     padding-left: 5px;
     height: 130vh;
@@ -3822,10 +3933,6 @@ footer img {
     scroll-snap-align: start;
     scroll-snap-stop: always;
   }
-  .Developer-Spotlight {
-    height: 260vh;
-    width: 100%;
-  }
   .fortnit-ad {
     margin-right: 15px;
   }
@@ -3836,6 +3943,15 @@ footer img {
   .fallguys-ad p,
   .fortnit-ad p {
     margin-left: 0;
+  }
+
+  /* Fortnite-Experiences End */
+
+  /* Developer-Spotlight Start */
+
+  .Developer-Spotlight {
+    height: 260vh;
+    width: 100%;
   }
   .section2-part1 {
     margin-bottom: 0;
@@ -3869,15 +3985,6 @@ footer img {
   .fance2 {
     width: 100%;
     height: 55%;
-    padding-left: 20px;
-  }
-  .fance3 {
-    width: 100%;
-    height: 55%;
-  }
-  .fance4 {
-    width: 100%;
-    height: 45%;
     padding-left: 20px;
   }
   .linear-gradient2 {
@@ -3983,6 +4090,11 @@ footer img {
   .angle {
     display: none;
   }
+
+  /* Developer-Spotligh End */
+
+  /* Holiday-Sale-Spotlight Start */
+
   .Holiday-Sale-Spotlight {
     height: 160vh;
   }
@@ -4029,6 +4141,11 @@ footer img {
     height: 100%;
     display: flex;
   }
+
+  /* Holiday-Sale-Spotlight End */
+
+  /* Game-Library Start */
+
   .book-mark {
     scroll-snap-align: start;
     scroll-snap-stop: always;
@@ -4043,6 +4160,11 @@ footer img {
   .hidden {
     display: none;
   }
+
+  /* Game-Library End */
+
+  /* Trending Start */
+
   .Trending {
     height: 120vh;
     width: 100%;
@@ -4066,6 +4188,11 @@ footer img {
     overflow-y: visible;
     width: 100%;
   }
+
+  /* Trending End */
+
+  /* Epic-Games-option Start */
+
   .Epic-Games-option {
     height: 75vh;
     width: 98%;
@@ -4093,6 +4220,11 @@ footer img {
     scroll-snap-align: start;
     scroll-snap-stop: always;
   }
+
+  /* Epic-Games-option End */
+
+  /* footer Start */
+
   footer {
     height: 160vh;
     padding: 34px 22px;
@@ -4107,4 +4239,8 @@ footer img {
     width: 100%;
     line-height: 2;
   }
+
+  /* footer End */
 }
+
+/* Responsive Mobile L End */
